# uct-repository

./: .gitignore  AUTHORS.rst  CHANGES.rst  Dockerfile  LICENSE  README.md  compile_messages.sh  docker-compose.yml  docker-services.yml  pyproject.toml  run_tests.sh
development/: server.crt  server.key
docker/uwsgi/: uwsgi_rest.ini
scripts/: clear.py  run.sh  setup.sh  test_rest.py
tests/: convert_to_csv.py  create_sample_data.py  sample_db.py  taxonomies_mapping.py
uct_repository/: cli.py  config.py  indexer.py
uct_repository/records/: config.py  constants.py  ext.py  fetchers.py  marshmallow.py  minters.py  permissions.py  record.py
uct_repository/records/jsonschemas/: __init__.py
uct_repository/records/jsonschemas/records/: record-v1.0.0.json
uct_repository/records/mappings/: __init__.py
uct_repository/records/mappings/v7/: __init__.py
uct_repository/records/mappings/v7/records/: record-v1.0.0.json
