[tool.poetry]
name = 'uct-repository'
version = "1.0.0"
description = "UCT repository"
authors = [
    'Denys Chaplyhin <chaplyhd@vscht.cz>'
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

oarepo = "^3.3.51"
oarepo-micro-api = "^3.3.50"

oarepo-validate = "^1.5.2"
oarepo-mapping-includes = "^1.4.2"
oarepo-invenio-model = "^2.1.2"
oarepo-dc = "^2.1.0"
oarepo-records-draft = "^5.5.3"
invenio-records-files = "^1.2.1"
oarepo-ui = "^2.0.1"
oarepo-actions = "^1.0.6"
oarepo-s3 = "^1.2.0"
oarepo-references = "^1.11.2"
oarepo-taxonomies = "^2.5.4"
oarepo-multilingual = "^2.4.3"

s3-client-lib = "0.1.6"

[tool.poetry.plugins."flask.commands"]
uct_repository = "uct_repository.cli:uct_repository"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"